# AI-Document-Processor

./: .gitignore  PR.md  README.md  azd-debug.lo  azure.yaml  contributing.md  deploy-testvm.sh  fixes.md  getRemoteSettings.sh  package-lock.json  startLocal.sh  test_client.ipynb  troubleshoot-functions.ps1  troubleshoot-functions.sh
Analysis/: 00-full-analysis.md  01-overview.md  02-architecture-detailed.md  03-use_cases_examples.md  04-ai_lz_options.md
data/: sampleRequest.json
docs/: LESSONS-LEARNED-WHAT-WAS-WRONG.md  OFFICIAL-DEPLOYMENT-GUIDE.md  PR-CHANGES-SUMMARY.md  TelemetryMonitoringInfo.md  customizations.md  promptConfiguration.md  troubleShootingGuide.md
frontend/: package-lock.json  package.json  swa-cli.config.json
infra/: .env.example  README.md  abbreviations.json  deploy.ps1  deploy.sh  deployment-outputs.json  install.ps1  main.bicep  main.json  main.parameters.json  test.bicep  test.json
localScripts/: grantRole.sh  ignoreSecurity.sh
pipeline/: .funcignore  config-test.py  func-logs.txt  function_app.py  host.json  oldsettings.json  pyproject.toml  requirements.txt
pipeline/activities/: callAiFoundry.py  callAoai.py  callAoaiMultiModal.py  callFoundryMultiModal.py  runDocIntel.py  sharepointLookup.py  speechToText.py  writeToBlob.py
pipeline/configuration/: configuration.py
pipeline/pipelineUtils/: azure_openai.py  blob_functions.py  db.py  prompts.py
pipeline/utils/: blobOperations.py
scripts/: AzuriteConfig  check-asp-quota.sh  check-vm-quota.sh  find-vm-sku.sh  getBlobConnectionStrings.sh  getRemoteSettings.ps1  getRemoteSettings.sh  postDeploy.ps1  postDeploy.sh  postprovision.ps1  (+4 more)
(+54 files in other folders)
